--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "bootstrap-icons": "^1.7.2",
     "colors": "^1.4.0",
     "css.gg": "^2.0.0",
+    "g": "^2.0.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
