--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
-    "@angular/forms":   "~0.2.0",
     "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
@@ -23,6 +22,8 @@
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@popperjs/core": "^2.11.2",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "colors": "^1.4.0",
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "^12.2.13",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -46,5 +48,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
-  }
+  },
+"browser": {
+    "crypto": false
+}
 }
