Añadiendo plantilla custom para Angular Materials

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/css.gg/icons/all.css"
+              "node_modules/css.gg/icons/all.css",
+              "src/custom-ng-material.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -104,7 +105,8 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "node_modules/css.gg/icons/all.css"
+              "node_modules/css.gg/icons/all.css",
+              "src/custom-ng-material.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
