--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.2",
     "ag-grid-angular": "^27.1.1",
     "ag-grid-community": "^27.1.0",
+    "angular-notifier": "^11.0.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
