--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "colors": "^1.4.0",
     "css.gg": "^2.0.0",
     "jquery": "^3.6.0",
+    "ngx-tippy-wrapper": "^4.0.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.0.7",
     "tslib": "^2.3.0",
