--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/bootstrap": "^5.1.10",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
