--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,9 +3,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    // "types": [
+    //   "jasmine"
+    // ]
   },
   "files": [
     "src/test.ts",
