--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/bootstrap": "^5.1.10",
     "@types/jasmine": "~3.8.0",
+    "@types/jest": "^27.5.1",
     "@types/jquery": "^3.5.14",
-    "@types/node": "^12.11.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^12.20.52",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
